4B/cs444/tests/a1/fail/Je_1_NonJoosConstructs_Throw.java
public class Je_1_NonJoosConstructs_Throw {
  public int m(int x) throws java.lang.Exception {
    if (x==42)
      throw new java.lang.Exception();
    return x;
  }
}

